[gd_scene load_steps=7 format=2]

[ext_resource path="res://art/Coin/Coin2.png" type="Texture" id=1]
[ext_resource path="res://PixelFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://art/GUI/Box.png" type="Texture" id=4]
[ext_resource path="res://art/Coin/Coin1.png" type="Texture" id=5]
[ext_resource path="res://art/Coin/Coin3.png" type="Texture" id=6]
[ext_resource path="res://xArchives/QuestBubble.gd" type="Script" id=8]

[node name="QuestBubble" type="MarginContainer"]
margin_right = 82.0
margin_bottom = 43.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 82.0
margin_bottom = 43.0
size_flags_horizontal = 3
texture = ExtResource( 4 )
patch_margin_left = 22
patch_margin_top = 23
patch_margin_right = 13
patch_margin_bottom = 20
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 82.0
margin_bottom = 43.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 4.0
margin_top = 5.0
margin_right = 77.0
margin_bottom = 39.0
custom_constants/separation = 0

[node name="Reward" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 73.0
margin_bottom = 32.0

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/Reward"]
margin_right = 32.0
margin_bottom = 32.0
mouse_filter = 1
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 1 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Reward"]
margin_left = 36.0
margin_top = 3.0
margin_right = 73.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 3 )
text = "50"

[connection signal="gui_input" from="." to="." method="_on_QuestBubble_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_QuestBubble_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_QuestBubble_mouse_exited"]
